<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imeKolegija"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonQuiz1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/Quiz1"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/buttonQuiz2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonQuiz1"
        android:text="@string/Quiz2"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/buttonQuiz3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonQuiz2"
        android:text="@string/Quiz3"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/buttonQuiz4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonQuiz3"
        android:text="@string/Quiz4"
        android:textColor="@android:color/black" />

</RelativeLayout>